@@ -219,6 +219,12 @@ Connection_getPrinters (Connection *self)
 		 NULL, attributes);
   answer = cupsDoRequest (self->http, request, "/");
   if (!answer || answer->request.status.status_code > IPP_OK_CONFLICT) {
+    if (answer && answer->request.status.status_code == IPP_NOT_FOUND) {
+      // No printers.
+      ippDelete (answer);
+      return PyDict_New ();
+    }
+
     set_ipp_error (answer ?
 		   answer->request.status.status_code :
 		   cupsLastError ());
