@@ -2,6 +2,8 @@
 
 	* cupsconnection.c (Connection_getPrinterAttributes): Make
 	'requesting-user-name-*' attributes lists.
+	(Connection_getPrinters): Handle IPP_NOT_FOUND, which is returned
+	when there are no queues.
 
 2006-05-03  Tim Waugh  <twaugh@redhat.com>
 
